# AlphaHarness

./: .gitignore  .mcp.json  README.md  pyproject.toml
alphaharness/: __init__.py  autotune.py  metrics.py  nt_client.py  plant.py  server.py  sim_log.py  sim_plant.py  sim_robot.py  wpilog_reader.py
tests/: demo_autotune.py  e2e_mcp.py  e2e_sim.py  probe_real_tree.py  probe_write_loop.py  test_autotune.py  test_metrics.py  test_regressions.py  test_wpilog.py
