[project]
name = "alphaharness"
version = "0.1.0"
description = "Read-only NT4 telemetry + step-response metrics for FRC, exposed to Claude over MCP"
requires-python = ">=3.10"
dependencies = [
    "pyntcore>=2026.0",
    "mcp>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
alphaharness-mcp = "alphaharness.server:main"
alphaharness-sim = "alphaharness.sim_robot:main"
alphaharness-simlog = "alphaharness.sim_log:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["alphaharness"]
